[tool.poetry]
name = "blockbuster"
version = "0.1.0"
description = ""
authors = ["João Victor Inocêncio Macedo de Aguiar <macdjoao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^3.3.2"
blue = "^0.9.1"
isort = "^5.12.0"
sqlalchemy = "^2.0.16"
python-dotenv = "^1.0.0"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
